--- a/src/css/App.sass
+++ b/src/css/App.sass
@@ -26,4 +26,4 @@ h1, h2, h3, h4
   @media(max-width: 48em)
     display: block
     margin: 0
-    margin-left: 5vw
+    margin-left: 7vw
