--- a/src/css/ProgressBar.sass
+++ b/src/css/ProgressBar.sass
@@ -31,5 +31,5 @@
 .progress-bar
   width: 100%
 
-  @media(max-width: 66em)
+  @media(max-width: 48em)
     width: 30%
