--- a/src/css/Sidebar.sass
+++ b/src/css/Sidebar.sass
@@ -19,7 +19,8 @@
   @media(max-width: 48em)
     display: flex
     justify-content: space-between
-    width: 90vw
+    width: 86vw
+    margin-top: 2em
 
     .progress:not(:last-child)
       margin-right: 1em
